--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
 
     <script>
-      var firebaseConfig = {
-        apiKey: "AIzaSyB0PCtYfnpcOZtQ43__6EOJpR8ksqaQMF8",
-        authDomain: "multiplayer-car-race-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-race-game.firebaseio.com",
-        projectId: "multiplayer-car-race-game",
-        storageBucket: "multiplayer-car-race-game.appspot.com",
-        messagingSenderId: "763343808168",
-        appId: "1:763343808168:web:a1cbfd937b213d15"
-      };
+     var firebaseConfig = {
+  apiKey: "AIzaSyBJNN_3__OaptFMvNlXP1Dx18kHsXGMlh0",
+  authDomain: "ball-movemant.firebaseapp.com",
+  databaseURL: "https://ball-movemant-default-rtdb.firebaseio.com",
+  projectId: "ball-movemant",
+  storageBucket: "ball-movemant.appspot.com",
+  messagingSenderId: "927659831252",
+  appId: "1:927659831252:web:4af3d931f0077e68903041"
+};
+
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
